--- a/ntsec.vcxproj.filters
+++ b/ntsec.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="src\securitydescriptor.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\mitigations.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\token.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\securitydescriptor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\mitigations.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
