--- a/ntsec.vcxproj.filters
+++ b/ntsec.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="src\mitigations.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\services.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\token.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\mitigations.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\services.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
