Add interactive mode basic support (messages & prompt missing)

--- a/ntsec.vcxproj.filters
+++ b/ntsec.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="src\services.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\handles.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\token.h">
@@ -78,6 +81,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\services.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\handles.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
