--- a/ntsec.vcxproj
+++ b/ntsec.vcxproj
@@ -152,6 +152,7 @@
   <ItemGroup>
     <ClCompile Include="src\accessright.c" />
     <ClCompile Include="src\files.c" />
+    <ClCompile Include="src\handles.c" />
     <ClCompile Include="src\main.c" />
     <ClCompile Include="src\mitigations.c" />
     <ClCompile Include="src\nt.c" />
@@ -165,6 +166,8 @@
   <ItemGroup>
     <ClInclude Include="include\accessright.h" />
     <ClInclude Include="include\files.h" />
+    <ClInclude Include="include\handles.h" />
+    <ClInclude Include="include\main.h" />
     <ClInclude Include="include\mitigations.h" />
     <ClInclude Include="include\nt.h" />
     <ClInclude Include="include\process.h" />
