--- a/ntsec.vcxproj.filters
+++ b/ntsec.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="src\handles.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\rpc.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\token.h">
@@ -87,6 +90,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\rpc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
